--- a/public/membership/index.html
+++ b/public/membership/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1693654155" rel="stylesheet">
+<link href="/css/custom.css?1693769806" rel="stylesheet">
 
 
 
@@ -257,7 +257,7 @@ crossorigin=""/>
         
         <div class="p-2 col-md-4">
             <h5 class="card-title">Second step</h5>
-            <p class="card-text">Pay for membership (50SEK per study year) <br>during <b>open hours at the T-RAX office</b>. <br> Opening hours can be found in the footer of this page.</p>
+            <p class="card-text">Pay for membership (50SEK per study year) <br>during <b>open hours at the T-RAX office</b>. <br> Opening hours can be found in the bottom of this page.</p>
         </div>
         <div class="p-2 col-md-1 my-auto img-row-div">
             <img class="img-fluid d-block" src="https://trax.chs.chalmers.se/img/icons/subtitle_2.png" alt="">
