🚀 Deploy via hugo-remote - #14

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1693769806" rel="stylesheet">
+<link href="/css/custom.css?1693934056" rel="stylesheet">
 
 
 
@@ -449,7 +449,7 @@ crossorigin=""></script>
             
             <li>
               <p class="text-white">Opening hours</p>
-              <p class="text-secondary">Mon 18:30-20:00<br>Thu 17:30-20:00</p>
+              <p class="text-secondary">Mon 18:30-20:00<br>Thu 17:30-20:00*<br><br>*Closed first & last week of every study period</p>
             </li>
             
             <li>
