--- a/public/membership/index.html
+++ b/public/membership/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1693934056" rel="stylesheet">
+<link href="/css/custom.css?1694025457" rel="stylesheet">
 
 
 
@@ -278,7 +278,7 @@ crossorigin=""/>
         <div class="p-2 col-md-6">
             <h5 class="card-title">Third step</h5>
             <p class="card-text">
-                Attend a safety walk-through. <br> Safety walk-throughs are held by T-RAX board members. <br> Information about upcoming safety walk-throughs can be <br> <b>found on our social media</b>. <br> <br> Once the safety walk-through is completed you are allowed in T-RAX <br> common areas & study rooms. <br> (<i>Congratulations you are now a member!</i>🥳)
+                Attend a safety walk-through. <br> Safety walk-throughs are held by T-RAX board members<br> <b>on thursday open hours,</b> starting at the T-RAX office.<br> Opening hours can be found in the bottom of this page. <br> <br> Once the safety walk-through is completed you are allowed in T-RAX <br> common areas & study rooms. <br> (<i>Congratulations you are now a member!</i>🥳)
             </p>
         </div>
         
