🚀 Deploy via hugo-remote - #36

--- a/public/membership/index.html
+++ b/public/membership/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1724684304" rel="stylesheet">
+<link href="/css/custom.css?1725107463" rel="stylesheet">
 
 
 
@@ -278,7 +278,8 @@ crossorigin=""/>
         <div class="p-2 col-md-6">
             <h5 class="card-title">Third step</h5>
             <p class="card-text">
-                Create an account at skedda. <br> To create an account att skedda, log in with SSO. <br> <b><a href="https://chalmersfuse.skedda.com"> Go to Chalmers FUSE skedda</a></b> 
+                Enroll in our Canvas. <br> When enrolled read through all the available course materials in <br><i>Safety at Fuse</i> and complete the quizes. <br> <br> Click the link below to enroll with your SSO account. <br>
+<b><a href="https://chalmers.instructure.com/enroll/8AGEM6"> Go to Chalmers FUSE Canvas</a></b> 
             </p>
         </div>
         
