🚀 Deploy via hugo-remote - #39

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1725205419" rel="stylesheet">
+<link href="/css/custom.css?1725206804" rel="stylesheet">
 
 
 
@@ -390,6 +390,13 @@ crossorigin=""></script>
       <img src="/img/sponsors/oderland.png" alt="/Oderland" class="p-3 img-fluid" />
       
     </div>
+    <br>
+    <div class="col-md-12">
+      <h1>A part of</h1>
+    </div>
+    <div class="p-3 justify-content-center">
+    <img src="img/sponsors/CHS-standard-black.png">
+  </div>
   </div>
 </section>
 
