--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1725463232" rel="stylesheet">
+<link href="/css/custom.css?1725464154" rel="stylesheet">
 
 
 
@@ -407,7 +407,7 @@ crossorigin=""></script>
       <h1>A part of</h1>
     </div>
     <div class="p-3 justify-content-center">
-    <img src="img/sponsors/CHS-standard-black.png">
+    <img src="img/sponsors/CHS-standard-black.png" class="p-3 img-fluid">
   </div>
   </div>
 </section>
