🚀 Deploy via hugo-remote - #44

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1725900891" rel="stylesheet">
+<link href="/css/custom.css?1725901538" rel="stylesheet">
 
 
 
@@ -243,11 +243,10 @@ crossorigin=""/>
 
 
 <div>
-    <h1 class="col-md-12">Want to renew your membership for this academic year?</h1>
+    <h1 class="col-md-12">How do I become a member? </h1>
 </div>
 <div>
-    <p class="lead mb-4"> Step One: <br> A new application needs to be sent in every year. Follow the steps in the application form. <br> <b><a href="https://forms.gle/N4z5FHXTszMQuJgE8">Follow the steps in the application form</a></b> <br>
-<br> Step Two: <br> Pay for membership (100SEK per study year) during open hours at the T-RAX office. Opening hours can be found in the bottom of this page.</p>
+    <p class="lead mb-4">To Become a member you can follow the steps on the page Become a member <br> <b><a href="http://trax.chs.chalmers.se/membership"> Become a member here. </a></b> <br> </p>
 
 </div>
 
@@ -260,15 +259,16 @@ crossorigin=""/>
 </div>
 
 <div>
-    <h1 class="col-md-12">How do I become a member? </h1>
+    <h1 class="col-md-12">I want to renew my membership for this academic year?</h1>
 </div>
 <div>
-    <p class="lead mb-4">To Become a member you can follow the steps on the page Become a member <br> <b><a href="http://trax.chs.chalmers.se/membership"> Become a member here. </a></b> <br> </p>
+    <p class="lead mb-4"> Step One: <br> A new application needs to be sent in every year. Follow the steps in the application form. <br> <b><a href="https://forms.gle/N4z5FHXTszMQuJgE8">Follow the steps in the application form</a></b> <br>
+<br> Step Two: <br> Pay for membership (100SEK per study year) during open hours at the T-RAX office. Opening hours can be found in the bottom of this page.</p>
 
 </div>
 
 <div>
-    <h1 class="col-md-12">How do I register for your courses?</h1>
+    <h1 class="col-md-12">How do I register for courses?</h1>
 </div>
 <div>
     <p class="lead mb-4">The links to the courses will be published on the website and our social media approximately a week before the course. The sheets will not be accessible when the links are not active. </p>
@@ -280,6 +280,14 @@ crossorigin=""/>
 </div>
 <div>
     <p class="lead mb-4">The links to the courses will be published on the website and our social media approximately a week before the course. The sheets will not be accessible when the links are not active. </p>
+
+</div>
+
+<div>
+    <h1 class="col-md-12">I have taken some workshop courses before. Do I need to do them again this year?</h1>
+</div>
+<div>
+    <p class="lead mb-4">No, you do not need to renew your courses. </p>
 
 </div>
 
