🚀 Deploy via hugo-remote - #51

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1727687511" rel="stylesheet">
+<link href="/css/custom.css?1728411197" rel="stylesheet">
 
 
 
@@ -279,7 +279,7 @@ crossorigin=""/>
     <h1 class="col-md-12">The google form is closed when I try to register for a course. What is wrong?</h1>
 </div>
 <div>
-    <p class="lead mb-4">The links to the courses will be published on the website and our social media approximately a week before the course. The sheets will not be accessible when the links are not active. </p>
+    <p class="lead mb-4">The links to the courses will be published on the website and our social media approximately a week before the course. The form will not be accessible when the links are not active. </p>
 
 </div>
 
