--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1732112028" rel="stylesheet">
+<link href="/css/custom.css?1732112372" rel="stylesheet">
 
 
 
@@ -243,6 +243,8 @@ crossorigin=""/>
 
 
 <style>
+  @media (min-width: 800px){
+
     .twoblocks-container {
         display: flex; 
         gap: 1rem; 
@@ -255,6 +257,7 @@ crossorigin=""/>
     .Courses{
       flex: 2;
     }
+  }
 
 </style>
 <br>
