🚀 Deploy via hugo-remote - #62

--- a/public/makerspace/fuse_box/index.html
+++ b/public/makerspace/fuse_box/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1734622484" rel="stylesheet">
+<link href="/css/custom.css?1734623716" rel="stylesheet">
 
 
 
@@ -292,7 +292,7 @@ crossorigin=""/>
   </ul>
 You can claim a box at any time, but during study week 7 a parking ticket will be placed inside all boxes.  We send out a message in our members facebook group when the parking tickets are placed.  If the parking ticket is still left and your sticker is not updated with a new date of claim on wednesday of study week 1 your box will be cleared and the contents will be thrown away. <br><br><b>When you want to start using an empty box: </b>
   <ol>
-    <li>Fill out the form to register your box. (You can modify the information)</li>
+    <li>Fill out the <a href= "https://docs.google.com/forms/d/e/1FAIpQLSc-iNp5IP2PtiEOhFjUrGl-lJXldUoLm75kKkORSWmO0P8kGQ/viewform" target="_blank">form</a> to register your box. (You can modify the information)</li>
     <li>Fill out the sticker and put it on the box (Stickers can be found on a roll at shelf 1)</li>
     <li>Put your stuff in the box (you can also put on a lid on the box if you want)</li>
   </ol>
