--- a/public/membership/index.html
+++ b/public/membership/index.html
@@ -257,7 +257,7 @@ crossorigin=""/>
         <div class="p-2 col-md-6">
             <h5 class="card-title">First step</h5>
             <p class="card-text">
-                Send in an application of membership. <br> <b><a href="https://forms.gle/LbhjWo1TQEXmbcJc8">Follow the steps in the application form</a></b> 
+                Send in an application of membership. <br> <b><a href="https://forms.gle/iL96ycP8HGgKj4vy7">Follow the steps in the application form</a></b> 
             </p>
         </div>
         
