🚀 Deploy via hugo-remote - #82

--- a/public/membership/index.html
+++ b/public/membership/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1764004141" rel="stylesheet">
+<link href="/css/custom.css?1766066364" rel="stylesheet">
 
 
 
@@ -294,7 +294,7 @@ crossorigin=""/>
         <div class="p-2 col-md-6">
             <h5 class="card-title">Third step</h5>
             <p class="card-text">
-                Attend a safety walk-through. <br> Safety walk-throughs are held by T-RAX board members<br> <b>on Wednesday, safety walk-throughs starts 17:30</b>.<br> <br> Once the safety walk-through is completed you are allowed in <br> T-RAX common areas & study rooms. <br> (<i>Congratulations you are now a member!</i>🥳)
+                Attend a safety walk-through. <br> Safety walk-throughs are held by T-RAX board members<br> <b>on Wednesday, safety walk-throughs starts 17:30 outside our office</b>.<br> <br> Once the safety walk-through is completed you are allowed in <br> T-RAX common areas & study rooms. <br> (<i>Congratulations you are now a member!</i>🥳)
             </p>
         </div>
         
