🚀 Deploy via hugo-remote - #89

--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -41,7 +41,7 @@
 <link href="/css/theme.css" rel="stylesheet" id="theme-stylesheet">
 
 
-<link href="/css/custom.css?1769611230" rel="stylesheet">
+<link href="/css/custom.css?1769611944" rel="stylesheet">
 
 
 
@@ -386,7 +386,7 @@ crossorigin=""/>
       <td>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIfAuLKEGMBhG-Yby0su49hswmOge3pe7770aR3b8xe3lySg/viewform?usp=sf_link">
           
-          Link to waitlist
+          Link to form
           
         </a>
       </td>
